--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bloc: ^8.1.3
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
+  cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.9
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
